tests/negative/typecheck/addrof-type.orng
fn main() -> Int
    const x: Type = &4
    0